--- a/resume/resume.adoc
+++ b/resume/resume.adoc
@@ -1,4 +1,6 @@
-== Josh Rosso
+include::../global/header.adoc[]
+
+== whoami 
 
 **Email:** joshrosso@gmail.com
 
@@ -15,7 +17,11 @@
 * AWS / EC2 / R53 / S3
 * *nix / nginx / apache 
 
-== Experience
+== about
+
+Hi, I'm Josh! I really love software development. I've spent my career teaching, consulting, and developing software/systems.
+
+== experience
 
 === MuleSoft
 **Senior Consultant / Systems Developer / Instructor**
@@ -26,7 +32,7 @@ _December 2013 to present_
 * Delivered performance testing including code/system tuning, analysis, and test case development to help multiple organizations achieve their throughput requirements.
 * Created http://training.mulesoft.com[MuleSoft Training's] infrastructure including web services, servers, and monitoring utilities.
 * Wrote MuleSoft's internal marketing integration service.
-* Contributed to MuleSoft's code base and documentation, outside of the services organization, by creating multiple pull requests. 
+* Contributed to MuleSoft's code base and documentation, outside of the services organization. 
 * Instructed and consulted on Mule, CI, development practices, and devops to teams across the globe.
 
 === Hyland Software
@@ -60,10 +66,3 @@ Growing up, I worked at a greenhouse. After my first year, I took over developme
 * Maintain website view layer with html and css.
 * Basic web programming implementing dynamic content in PHP (back in PHP4 days).
 * Setup internal network's remote desktop configuration.
-
-== Education
-I did not attend college.
-
-== Story
-
-I always knew I'd like to focus my professional life around technology. Considering technology's massive scope, it was a challenge to find where to place my effort. Overtime I was provided the opportunity to work on more and more development projects. This is where I grew my affinity for software development. As my development skill set grew, I took on consulting and training roles that allowed me to do development work, yet still maintain a relationship with the technologies user base. As I continue to progress in the amazing world of software development I'm finding a desire to spend more time writing software and contributing to open source. I'm excited to see the amazing technologies that will come out of this flourishing world of software engineering.
