--- a/posts/index.adoc
+++ b/posts/index.adoc
@@ -2,5 +2,5 @@ include::../global/header.adoc[]
 
 :imagesdir: ../imgs
 
-== link::macish-tooling[Mac(ish) Tooling]
+== link:macish-tooling[Mac(ish) Tooling]
 03/05/2016
