--- a/posts/index.adoc
+++ b/posts/index.adoc
@@ -2,6 +2,9 @@ include::../global/header.adoc[]
 
 :imagesdir: ../imgs
 
+== link:missed-connections-implications-of-pooling[Missed Connections: Implications of Pooling]
+03/27/2016
+
 == link:hooking-mule-into-rabbitmq[Hooking Mule into RabbitMQ]
 03/13/2016
 
